samples/_failures_safe/1761167683_cb74c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_757dff95.c:140:1: error: expected identifier or ‘(’ at end of input
  140 | int
      | ^~~
